--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Чат</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
     <div id="chat">
@@ -12,6 +12,6 @@
         <input type="text" id="messageInput" placeholder="Введите сообщение">
         <button id="sendMessage">Отправить</button>
     </div>
-    <script src="script.js"></script>
+    <script src="public/script.js"></script>
 </body>
 </html>
